pocketpy/pocketpy.h


#define PK_VERSION				"2.1.8"
#define PK_VERSION_MAJOR            2
#define PK_VERSION_MINOR            1
#define PK_VERSION_PATCH            8
#define PK_ENABLE_OS                1
#define PK_ENABLE_THREADS           1
#define PK_ENABLE_DETERMINISM       0
#define PK_ENABLE_WATCHDOG          0                
#define PK_ENABLE_CUSTOM_SNAME      0                
#define PK_ENABLE_MIMALLOC          0                
    #define PK_GC_MIN_THRESHOLD     20000
    #define PK_VM_STACK_SIZE        16384
#define PK_MAX_CO_VARNAMES          64
#define PK_MAX_MODULE_PATH_LEN      63
#define PK_M_PI                     3.1415926535897932384
#define PK_M_E                      2.7182818284590452354
#define PK_M_DEG2RAD                0.017453292519943295
#define PK_M_RAD2DEG                57.29577951308232
#define PK_INST_ATTR_LOAD_FACTOR    0.67f
#define PK_TYPE_ATTR_LOAD_FACTOR    0.5f
        #define PK_MALLOC(size)                 mi_malloc(size)
        #define PK_REALLOC(ptr, size)           mi_realloc(ptr, size)
        #define PK_FREE(ptr)                    mi_free(ptr)
            #define PK_MALLOC(size)             malloc(size)
            #define PK_REALLOC(ptr, size)       realloc(ptr, size)
            #define PK_FREE(ptr)                free(ptr)
            #define PK_MALLOC(size)             std::malloc(size)
            #define PK_REALLOC(ptr, size)       std::realloc(ptr, size)
            #define PK_FREE(ptr)                std::free(ptr)
    #define PY_SYS_PLATFORM     0
    #define PY_SYS_PLATFORM_STRING "win32"
    #define PY_SYS_PLATFORM     1
    #define PY_SYS_PLATFORM_STRING "emscripten"
        #define PY_SYS_PLATFORM     2
        #define PY_SYS_PLATFORM_STRING "ios"
        #define PY_SYS_PLATFORM     2
        #define PY_SYS_PLATFORM_STRING "ios"
        #define PY_SYS_PLATFORM     3
        #define PY_SYS_PLATFORM_STRING "darwin"
    #define PY_SYS_PLATFORM     4
    #define PY_SYS_PLATFORM_STRING "android"
    #define PY_SYS_PLATFORM     5
    #define PY_SYS_PLATFORM_STRING "linux"
    #define PY_SYS_PLATFORM     6
    #define PY_SYS_PLATFORM_STRING "unknown"
    #define PK_IS_DESKTOP_PLATFORM 1
    #define PK_IS_DESKTOP_PLATFORM 0
typedef union c11_vec2i {
    struct { int x, y; };
    int data[2];
    int64_t _i64;
} c11_vec2i;
typedef union c11_vec3i {
    struct { int x, y, z; };
    int data[3];
} c11_vec3i;
typedef union c11_vec2 {
    struct { float x, y; };
    float data[2];
} c11_vec2;
typedef union c11_vec3 {
    struct { float x, y, z; };
    float data[3];
} c11_vec3;
typedef union c11_mat3x3 {
    struct {
        float _11, _12, _13;
        float _21, _22, _23;
        float _31, _32, _33;
    };
    float m[3][3];
    float data[9];
} c11_mat3x3;
typedef union c11_color32 {
    struct {
        unsigned char r;
        unsigned char g;
        unsigned char b;
        unsigned char a;
    };
    unsigned char data[4];
    uint32_t u32;
} c11_color32;
typedef struct py_OpaqueName py_OpaqueName;
typedef py_OpaqueName* py_Name;
typedef struct py_TValue py_TValue;
typedef int16_t py_Type;
typedef int64_t py_i64;
typedef double py_f64;
typedef void (*py_Dtor)(void*);
typedef struct py_TValue {
    py_Type type;
    bool is_ptr;
    int extra;
    union {
        int64_t _i64;
        char _chars[16];
    };
} py_TValue;
typedef struct c11_sv {
    const char* data;
    int size;
} c11_sv;
typedef py_TValue* py_Ref;
typedef py_TValue* py_ObjectRef;
typedef py_TValue* py_GlobalRef;
typedef py_TValue* py_StackRef;
typedef py_TValue* py_ItemRef;
typedef py_TValue* py_OutRef;
typedef struct py_Frame py_Frame;
enum py_TraceEvent {
    TRACE_EVENT_LINE,
    TRACE_EVENT_PUSH,
    TRACE_EVENT_POP,
};
typedef void (*py_TraceFunc)(py_Frame* frame, enum py_TraceEvent);
typedef struct py_Callbacks {
    char* (*importfile)(const char* path, int* data_size);
    PY_MAYBENULL py_GlobalRef (*lazyimport)(const char*);
    void (*print)(const char*);
    void (*flush)();
    int (*getchr)();
    PY_MAYBENULL void (*gc_mark)(void (*f)(py_Ref val, void* ctx), void* ctx);
    PY_MAYBENULL bool (*displayhook)(py_Ref val) PY_RAISE;
} py_Callbacks;
typedef struct py_AppCallbacks {
    void (*on_vm_ctor)(int index);
    void (*on_vm_dtor)(int index);
} py_AppCallbacks;
typedef bool (*py_CFunction)(int argc, py_StackRef argv) PY_RAISE PY_RETURN;
enum py_CompileMode { EXEC_MODE, EVAL_MODE, SINGLE_MODE, RELOAD_MODE };
PK_API void py_initialize();
PK_API void py_finalize();
PK_API int py_currentvm();
PK_API void py_switchvm(int index);
PK_API void py_resetvm();
PK_API void py_resetallvm();
PK_API void* py_getvmctx();
PK_API void py_setvmctx(void* ctx);
PK_API py_Callbacks* py_callbacks();
PK_API py_AppCallbacks* py_appcallbacks();
PK_API void py_sys_setargv(int argc, char** argv);
PK_API void py_sys_settrace(py_TraceFunc func, bool reset);
PK_API int py_gc_collect();
PK_API void* py_malloc(size_t size);
PK_API void* py_realloc(void* ptr, size_t size);
PK_API void py_free(void* ptr);
PK_API py_GlobalRef py_True();
PK_API py_GlobalRef py_False();
PK_API py_GlobalRef py_None();
PK_API py_GlobalRef py_NIL();
PK_API const char* py_Frame_sourceloc(py_Frame* frame, int* lineno);
PK_API void py_Frame_newglobals(py_Frame* frame, py_OutRef out);
PK_API void py_Frame_newlocals(py_Frame* frame, py_OutRef out);
PK_API py_StackRef py_Frame_function(py_Frame* frame);
PK_API bool py_compile(const char* source,
                       const char* filename,
                       enum py_CompileMode mode,
                       bool is_dynamic) PY_RAISE PY_RETURN;
PK_API bool py_compilefile(const char* src_path,
                           const char* dst_path) PY_RAISE;
PK_API bool py_execo(const void* data, int size, const char* filename, py_Ref module) PY_RAISE PY_RETURN;
PK_API bool py_exec(const char* source,
                    const char* filename,
                    enum py_CompileMode mode,
                    py_Ref module) PY_RAISE PY_RETURN;
PK_API bool py_eval(const char* source, py_Ref module) PY_RAISE PY_RETURN;
PK_API bool py_smartexec(const char* source, py_Ref module, ...) PY_RAISE PY_RETURN;
PK_API bool py_smarteval(const char* source, py_Ref module, ...) PY_RAISE PY_RETURN;
PK_API void py_newint(py_OutRef, py_i64);
PK_API void py_newtrivial(py_OutRef out, py_Type type, void* data, int size);
PK_API void py_newfloat(py_OutRef, py_f64);
PK_API void py_newbool(py_OutRef, bool);
PK_API void py_newstr(py_OutRef, const char*);
PK_API char* py_newstrn(py_OutRef, int);
PK_API void py_newstrv(py_OutRef, c11_sv);
PK_API void py_newfstr(py_OutRef, const char*, ...);
PK_API unsigned char* py_newbytes(py_OutRef, int n);
PK_API void py_newnone(py_OutRef);
PK_API void py_newnotimplemented(py_OutRef);
PK_API void py_newellipsis(py_OutRef);
PK_API void py_newnil(py_OutRef);
PK_API void py_newnativefunc(py_OutRef, py_CFunction);
PK_API py_Name py_newfunction(py_OutRef out,
                              const char* sig,
                              py_CFunction f,
                              const char* docstring,
                              int slots);
PK_API void py_newboundmethod(py_OutRef out, py_Ref self, py_Ref func);
PK_API void* py_newobject(py_OutRef out, py_Type type, int slots, int udsize);
PK_API py_Name py_name(const char*);
PK_API const char* py_name2str(py_Name);
PK_API py_i64 py_toint(py_Ref);
PK_API void py_tphookattributes(py_Type type,
                                bool (*getattribute)(py_Ref self, py_Name name) PY_RAISE PY_RETURN,
                                bool (*setattribute)(py_Ref self, py_Name name, py_Ref val)
                                    PY_RAISE PY_RETURN,
                                bool (*delattribute)(py_Ref self, py_Name name) PY_RAISE,
                                bool (*getunboundmethod)(py_Ref self, py_Name name) PY_RETURN);
PK_API py_GlobalRef py_retval();
#define py_r0() py_getreg(0)
#define py_r1() py_getreg(1)
PK_API bool
    py_applydict(py_Ref self, bool (*f)(py_Name name, py_Ref val, void* ctx), void* ctx) PY_RAISE;
#define py_arg(i) (&argv[i])
PK_API bool
    py_dict_apply(py_Ref self, bool (*f)(py_Ref key, py_Ref val, void* ctx), void* ctx) PY_RAISE;