pocketpy.odin

/*
 *  Copyright (c) 2026 blueloveTH
 *  Distributed Under The MIT License
 *  https://github.com/pocketpy/pocketpy
 */
package pocketpy

foreign import lib {
	"libs/libpocketpy.a"
}


// clang-format off
PK_VERSION             :: "2.1.8"
PK_VERSION_MAJOR            :: 2
PK_VERSION_MINOR            :: 1
PK_VERSION_PATCH            :: 8
PK_ENABLE_OS                :: 1
PK_ENABLE_THREADS           :: 1
PK_ENABLE_DETERMINISM       :: 0
PK_ENABLE_WATCHDOG          :: 0
PK_ENABLE_CUSTOM_SNAME      :: 0
PK_ENABLE_MIMALLOC          :: 0
PK_GC_MIN_THRESHOLD     :: 20000
PK_VM_STACK_SIZE        :: 16384
PK_MAX_CO_VARNAMES          :: 64

/*************** internal settings ***************/
// This is the maximum character length of a module path
PK_MAX_MODULE_PATH_LEN      :: 63

// This is some math constants
PK_M_PI                     :: 3.1415926535897932384
PK_M_E                      :: 2.7182818284590452354
PK_M_DEG2RAD                :: 0.017453292519943295
PK_M_RAD2DEG                :: 57.29577951308232

// Hash table load factor (smaller ones mean less collision but more memory)
// For class instance
PK_INST_ATTR_LOAD_FACTOR    :: 0.67

// For class itself
PK_TYPE_ATTR_LOAD_FACTOR    :: 0.5
PY_SYS_PLATFORM          :: 5
PY_SYS_PLATFORM_STRING   :: "linux"
PK_IS_DESKTOP_PLATFORM   :: 1

c11_vec2i :: struct #raw_union {
	using _: struct {
		x, y: i32,
	},

	data: [2]i32,
	_i64: i64,
}

c11_vec3i :: struct #raw_union {
	using _: struct {
		x, y, z: i32,
	},

	data: [3]i32,
}

c11_vec2 :: struct #raw_union {
	using _: struct {
		x, y: f32,
	},

	data: [2]f32,
}

c11_vec3 :: struct #raw_union {
	using _: struct {
		x, y, z: f32,
	},

	data: [3]f32,
}

c11_mat3x3 :: struct #raw_union {
	using _: struct {
		_11, _12, _13: f32,
		_21, _22, _23: f32,
		_31, _32, _33: f32,
	},

	m:    [3][3]f32,
	data: [9]f32,
}

c11_color32 :: struct #raw_union {
	using _: struct {
		r: u8,
		g: u8,
		b: u8,
		a: u8,
	},

	data: [4]u8,
	_u32: u32,
}

py_OpaqueName :: struct {}

/// A pointer that represents a python identifier. For fast name resolution.
py_Name :: ^py_OpaqueName

/// An integer that represents a python type. `0` is invalid.
py_Type :: i16

/// A 64-bit integer type. Corresponds to `int` in python.
py_i64 :: i64

/// A 64-bit floating-point type. Corresponds to `float` in python.
py_f64 :: f64

/// A generic destructor function.
py_Dtor :: proc "c" (rawptr)

import "core:c"

py_TValue :: struct {
	type:   py_Type,
	is_ptr: c.bool,
	extra:  c.int,
	using _: struct #raw_union {
		_i64:   i64,
		_chars: [16]i8,
	},
}

/// A string view type. It is helpful for passing strings which are not null-terminated.
c11_sv :: struct {
	data: cstring,
	size: i32,
}

/// A generic reference to a python object.
py_Ref :: ^py_TValue

/// A reference which has the same lifespan as the python object.
py_ObjectRef :: ^py_TValue

/// A global reference which has the same lifespan as the VM.
py_GlobalRef :: ^py_TValue

/// A specific location in the value stack of the VM.
py_StackRef :: ^py_TValue

/// An item reference to a container object. It invalidates when the container is modified.
py_ItemRef :: ^py_TValue

/// An output reference for returning a value. Only use this for function arguments.
py_OutRef :: ^py_TValue
py_Frame  :: struct {}

// An enum for tracing events.
py_TraceEvent :: enum u32 {
	LINE = 0,
	PUSH = 1,
	POP  = 2,
}

py_TraceFunc :: proc "c" (frame: ^py_Frame, _: py_TraceEvent)

/// A struct contains the callbacks of the VM.
py_Callbacks :: struct {
	/// Used by `__import__` to load a source or compiled module.
	importfile: proc "c" (path: cstring, data_size: ^i32) -> cstring,

	/// Called before `importfile` to lazy-import a C module.
	lazyimport: proc "c" (cstring) -> py_GlobalRef,

	/// Used by `print` to output a string.
	print: proc "c" (cstring),

	/// Flush the output buffer of `print`.
	flush: proc "c" (),

	/// Used by `input` to get a character.
	getchr: proc "c" () -> i32,

	/// Used by `gc.collect()` to mark extra objects for garbage collection.
	gc_mark: proc "c" (f: proc "c" (val: py_Ref, ctx: rawptr), ctx: rawptr),

	/// Used by `PRINT_EXPR` bytecode.
	_bool: proc "c" (^i32) -> proc "c" (py_Ref) -> i32,
}

/// A struct contains the application-level callbacks.
py_AppCallbacks :: struct {
	on_vm_ctor: proc "c" (index: i32),
	on_vm_dtor: proc "c" (index: i32),
}

/// Native function signature.
/// @param argc number of arguments.
/// @param argv array of arguments. Use `py_arg(i)` macro to get the i-th argument.
/// @return `true` if the function is successful or `false` if an exception is raised.
py_CFunction :: proc "c" (argc: int, argv: [^]py_TValue) -> i32

/// Python compiler modes.
/// + `EXEC_MODE`: for statements.
/// + `EVAL_MODE`: for expressions.
/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
/// + `RELOAD_MODE`: for reloading a module without allocating new types if possible.
py_CompileMode :: enum u32 {
	/// Python compiler modes.
	/// + `EXEC_MODE`: for statements.
	/// + `EVAL_MODE`: for expressions.
	/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
	/// + `RELOAD_MODE`: for reloading a module without allocating new types if possible.
	EXEC_MODE   = 0,

	/// Python compiler modes.
	/// + `EXEC_MODE`: for statements.
	/// + `EVAL_MODE`: for expressions.
	/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
	/// + `RELOAD_MODE`: for reloading a module without allocating new types if possible.
	EVAL_MODE   = 1,

	/// Python compiler modes.
	/// + `EXEC_MODE`: for statements.
	/// + `EVAL_MODE`: for expressions.
	/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
	/// + `RELOAD_MODE`: for reloading a module without allocating new types if possible.
	SINGLE_MODE = 2,

	/// Python compiler modes.
	/// + `EXEC_MODE`: for statements.
	/// + `EVAL_MODE`: for expressions.
	/// + `SINGLE_MODE`: for REPL or jupyter notebook execution.
	/// + `RELOAD_MODE`: for reloading a module without allocating new types if possible.
	RELOAD_MODE = 3,
}

@(default_calling_convention="c")
foreign lib {
	/// Initialize pocketpy and the default VM.
	py_initialize :: proc() ---

	/// Finalize pocketpy and free all VMs. This opearation is irreversible.
	/// After this call, you cannot use any function from this header anymore.
	py_finalize :: proc() ---

	/// Get the current VM index.
	py_currentvm :: proc() -> i32 ---

	/// Switch to a VM.
	/// @param index index of the VM ranging from 0 to 16 (exclusive). `0` is the default VM.
	py_switchvm :: proc(index: i32) ---

	/// Reset the current VM.
	py_resetvm :: proc() ---

	/// Reset All VMs.
	py_resetallvm :: proc() ---

	/// Get the current VM context. This is used for user-defined data.
	py_getvmctx :: proc() -> rawptr ---

	/// Set the current VM context. This is used for user-defined data.
	py_setvmctx :: proc(ctx: rawptr) ---

	/// Setup the callbacks for the current VM.
	py_callbacks :: proc() -> ^py_Callbacks ---

	/// Setup the application callbacks
	py_appcallbacks :: proc() -> ^py_AppCallbacks ---

	/// Set `sys.argv`. Used for storing command-line arguments.
	py_sys_setargv :: proc(argc: i32, argv: ^cstring) ---

	/// Set the trace function for the current VM.
	py_sys_settrace :: proc(func: py_TraceFunc, reset: bool) ---

	/// Invoke the garbage collector.
	py_gc_collect :: proc() -> i32 ---

	/// Wrapper for `PK_MALLOC(size)`.
	py_malloc :: proc(size: i32) -> rawptr ---

	/// Wrapper for `PK_REALLOC(ptr, size)`.
	py_realloc :: proc(ptr: rawptr, size: i32) -> rawptr ---

	/// Wrapper for `PK_FREE(ptr)`.
	py_free :: proc(ptr: rawptr) ---

	/// A shorthand for `True`.
	py_True :: proc() -> py_GlobalRef ---

	/// A shorthand for `False`.
	py_False :: proc() -> py_GlobalRef ---

	/// A shorthand for `None`.
	py_None :: proc() -> py_GlobalRef ---

	/// A shorthand for `nil`. `nil` is not a valid python object.
	py_NIL :: proc() -> py_GlobalRef ---

	/// Get the current source location of the frame.
	py_Frame_sourceloc :: proc(frame: ^py_Frame, lineno: ^i32) -> cstring ---

	/// Python equivalent to `globals()` with respect to the given frame.
	py_Frame_newglobals :: proc(frame: ^py_Frame, out: py_OutRef) ---

	/// Python equivalent to `locals()` with respect to the given frame.
	py_Frame_newlocals :: proc(frame: ^py_Frame, out: py_OutRef) ---

	/// Get the function object of the frame.
	/// Returns `NULL` if not available.
	py_Frame_function :: proc(frame: ^py_Frame) -> py_StackRef ---

	/// Compile a source string into a code object.
	/// Use python's `exec()` or `eval()` to execute it.
	py_compile :: proc() -> i32 ---

	/// Compile a `.py` file into a `.pyc` file.
	py_compilefile :: proc() -> i32 ---

	/// Run a compiled code object.
	py_execo :: proc() -> i32 ---

	/// Run a source string.
	/// @param source source string.
	/// @param filename filename (for error messages).
	/// @param mode compile mode. Use `EXEC_MODE` for statements `EVAL_MODE` for expressions.
	/// @param module target module. Use NULL for the main module.
	/// @return `true` if the execution is successful or `false` if an exception is raised.
	py_exec :: proc(source: cstring, filename: cstring, mode: py_CompileMode, module: py_Ref) -> i32 ---

	/// Evaluate a source string. Equivalent to `py_exec(source, "<string>", EVAL_MODE, module)`.
	py_eval :: proc() -> i32 ---

	/// Run a source string with smart interpretation.
	/// Example:
	/// `py_newstr(py_r0(), "abc");`
	/// `py_newint(py_r1(), 123);`
	/// `py_smartexec("print(_0, _1)", NULL, py_r0(), py_r1());`
	/// `// "abc 123" will be printed`.
	py_smartexec :: proc() -> i32 ---

	/// Evaluate a source string with smart interpretation.
	/// Example:
	/// `py_newstr(py_r0(), "abc");`
	/// `py_smarteval("len(_)", NULL, py_r0());`
	/// `int res = py_toint(py_retval());`
	/// `// res will be 3`.
	py_smarteval :: proc() -> i32 ---

	/// Create an `int` object.
	py_newint :: proc(py_OutRef, py_i64) ---

	/// Create a trivial value object.
	py_newtrivial :: proc(out: py_OutRef, type: py_Type, data: rawptr, size: i32) ---

	/// Create a `float` object.
	py_newfloat :: proc(py_OutRef, py_f64) ---

	/// Create a `bool` object.
	py_newbool :: proc(py_OutRef, bool) ---

	/// Create a `str` object from a null-terminated string (utf-8).
	py_newstr :: proc(py_OutRef, cstring) ---

	/// Create a `str` object with `n` UNINITIALIZED bytes plus `'\0'`.
	py_newstrn :: proc(py_OutRef, i32) -> cstring ---

	/// Create a `str` object from a `c11_sv`.
	py_newstrv :: proc(py_OutRef, c11_sv) ---

	/// Create a formatted `str` object.
	py_newfstr :: proc(py_OutRef, cstring, #c_vararg ..any) ---

	/// Create a `bytes` object with `n` UNINITIALIZED bytes.
	py_newbytes :: proc(_: py_OutRef, n: i32) -> ^u8 ---

	/// Create a `None` object.
	py_newnone :: proc(py_OutRef) ---

	/// Create a `NotImplemented` object.
	py_newnotimplemented :: proc(py_OutRef) ---

	/// Create a `...` object.
	py_newellipsis :: proc(py_OutRef) ---

	/// Create a `nil` object. `nil` is an invalid representation of an object.
	/// Don't use it unless you know what you are doing.
	py_newnil :: proc(py_OutRef) ---

	/// Create a `nativefunc` object.
	py_newnativefunc :: proc(out: py_OutRef, func: py_CFunction) ---

	/// Create a `function` object.
	py_newfunction :: proc(out: py_OutRef, sig: cstring, f: i32, docstring: cstring, slots: i32) -> py_Name ---

	/// Create a `boundmethod` object.
	py_newboundmethod :: proc(out: py_OutRef, self: py_Ref, func: py_Ref) ---

	/// Create a new object.
	/// @param out output reference.
	/// @param type type of the object.
	/// @param slots number of slots. Use `-1` to create a `__dict__`.
	/// @param udsize size of your userdata.
	/// @return pointer to the userdata.
	py_newobject :: proc(out: py_OutRef, type: py_Type, slots: i32, udsize: i32) -> rawptr ---

	/// Convert a null-terminated string to a name.
	py_name :: proc(cstring) -> py_Name ---

	/// Convert a name to a null-terminated string.
	py_name2str :: proc(py_Name) -> cstring ---
